<resources>
    <string name="app_name">MarBin</string>

    <string name="dialog_text">Your request will be handle as soon as possible.</string>
    <string name="report_successful">Report Successful</string>
    <string name="ok">OK</string>
    <string name="select_date_to_collect">Please Select Collect Date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="r">Thank You For Your Report. We are apologize of the missed collected rubbish. We will clean it as fast as possible. \n Thank You</string>
    <string name="request_successful">Request Successful</string>

    <!--News Edu-->
    <string name="headerName"><![CDATA[News & Education]]></string>

    <!--Category-->
    <string name="main">Main Page Test</string>
    <string name="title_game">Game Page Test</string>
    <string name="title_category">Category Page</string>
    <string name="title_game_question">Recycle Classification Trivia (%1$d/%2$d)</string>
    <string name="quiz_game_result">Your Score: %1$d/%2$d</string>
    <string name="play">Play</string>
    <string name="play_again">Play Again</string>
    <string name="score">Score</string>
    <string name="non_recyclable">Non-Recyclable</string>
    <string name="glass">Glass</string>
    <string name="plastic">Plastic</string>
    <string name="paper">Paper</string>
    <string name="start">Start Game</string>
    <string name="_1">1.</string>
    <string name="start_category">Start Category</string>
    <string name="activity_name">Category Detail</string>

    <!--Login/Registration-->
    <string name="textView">ID Number:  </string>
    <string name="textView2">Password:  </string>
    <string name="textView3">Name:  </string>
    <string name="textView6">Address:  </string>
    <string name="editText7">ID Number</string>
    <string name="editText4">Password</string>
    <string name="button">Login</string>
    <string name="button2">Sign Up</string>
    <string name="button3">Register</string>
    <string name="button4">Clear</string>
</resources>
